# modular_multiplication

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  app.py  loo.py  pyproject.toml  requirements.txt
apps/: circle.py  triangle.py  utils.py
pages/: circle.py  info.py  square.py  triangle.py  utils.py
src/: utils.py
