[tool.poetry]
name = "modular_multiplication"
version = "0.1.0"
description = "App for visualizing modular multiplication on a circle"
authors = ["vegard ulriksen solberg <vegardsolberg@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
plotly = "*"
dash = "*"
dash-bootstrap-components = "*"
seaborn = "*"
gunicorn = "*"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
